tests/integration/snapshots/integration__test_json__unexpected_letter_in_negative.snap
---
source: tests/integration/test_json.rs
expression: "format_output_snapshot(json_bytes, &annotated)"
---
case --- 
-abcd
stdout --- 
<empty>
stderr --- 
error: expected digit following minus sign, found `a`
 --> stdin:1:1
  |
1 | -abcd
  | ^
  | |
  | minus sign found here
